attendees page styles except some assets

--- a/css/Sass/_grid.scss
+++ b/css/Sass/_grid.scss
@@ -39,6 +39,12 @@
 		height: 480px;
 	}
 
+.grid-item--sm-square {
+	width: 50%;
+	height: 400px;
+	margin: 0;
+}
+
 .grid-item--portrait-rectangle {
 		width: 240px;
 		height: 480px;	
