tidy up sass files

--- a/css/Sass/_header.scss
+++ b/css/Sass/_header.scss
@@ -1,7 +1,7 @@
 // HEADER
 .navbar-default {
-	background-color: $white;
-	border-color: $white;
+	background-color: #fff;
+	border-color: #fff;
 	min-height: 85px;
 }
 
@@ -51,3 +51,5 @@ nav {
 .navbar {
 	margin-bottom: 0;
 }
+
+// END HEADER STYLES
