--- a/css/Sass/main.scss
+++ b/css/Sass/main.scss
@@ -2,488 +2,10 @@
 // PARTIALS 
 
 @import "variables";
+@import "typography";
 @import "header";
 @import "footer";
 @import "grid";
-
-
-// TYPOGRAPHY 
-
-* {
-	font-family: $primary-font;
-}
-
-.accented_text {
-	color: $pink_orange;
-	font-weight: 500;
-}
-
-h3 {
-	font-size: 16px;
-	font-weight: 600;
-	text-transform: uppercase;
-	font-family: $secondary_font;
-}
-
-.white_text {
-	color: $white;
-}
-
-a {
-	text-decoration: none;
-	transition: $transition;
-}
-
-.hashtag {
-	color: $accent_color;
-	font-weight: 600;
-	text-decoration: underline;
-}
-
-.vertical_divider {
-	border-right: 2px solid rgba(99, 104, 108, 0.2);
-	margin-left: 10px;
-	margin-right: 10px;
-}
-
-.bottom_divider {
-	border-bottom: 1px dotted $medium_grey;
-}
-
-//JUMBOTRON
-
-.jumbotron {
-	background: url(../img/landing_hero@2x.png);
-	background-size: cover;
-	height: 500px;
-	position: relative;
-	margin-bottom: 0;
-	h2 {
-		text-align: center;
-		font-size: 36px;
-		margin-top: 0px;
-		font-weight: 400;
-		line-height: 1.4em;
-		margin-bottom: 1.7em;
-	}
-}
-
-.top_banner {
-	margin-top: 3em;
-	margin-bottom: 2em;
-	@extend h3;
-	color: $grey;
-	text-align: center;
-	li {
-	display: inline-block;
-	}
-}
-
-.hero_btn_group {
-	text-align: center;
-}
-
-.hero_btn  {
-	display: inline-block;
-
-	&:nth-of-type(1) {
-		margin-right: 20px;
-	}
-}
-
-//BUTTONS
-
-.btn-primary {
-	@include big-button($accent_color, $white);
-	font-weight: 500;
-	text-transform: uppercase;
-	border-radius: 0;
-}
-
-.btn-group-lg>.btn, .btn-lg {
-	text-transform: uppercase;
-	font-size: 16px;
-	padding: 12px 24px;
-	margin-right: .7em;
-}
-
-.about-block-button {
-	margin-left: 25px;
-	@include big-button($white, $pink_orange);
-	margin-bottom: 20px;
-	margin-top: 20px;
-	svg {
-		width: 35px;
-		margin-left: 25px;
-		fill: $white;
-		line {
-			stroke: $white;
-		}
-	}
-	&:hover, &:focus, &:active:focus  {
-			polygon {
-			fill: $pink_orange;
-			}
-			line {
-			stroke: $pink_orange;
-			}
-		}
-}
-
-// VIDEO SECTION ON MAIN PAGE
-
-.video-container {
-	position: relative;
-	margin: 0px 85px 40px 85px;
-	background: url(../img/video_placeholder@2x.png);
-	background-size: cover;
-	height: 500px;
-}
-
-.video-caption {
-	background-color: rgba(0, 121, 100, 0.7);
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	padding: 15px 15px 15px 30px;
-	p {
-		font-size: 18px;
-		font-weight: 600;
-		color: $white;
-		text-transform: uppercase;
-	}
-	&:hover {
-		background-color: rgba(0, 121, 100, 0.9);
-	}
-}
-
-// TWITTER FEED
-
-.twitter-feed {
-	background: $light_grey;
-	padding-top: 50px;
-	h3 {
-		margin-left: 85px;
-		color: $pink_orange;
-	}
-	h4 {
-		font-family: $secondary_font;
-		display: inline-block;
-		color: $medium_grey;
-		text-transform: uppercase;
-	}
-}
-
-.twitter-handle {
-	margin-left: 25px;
-}
-
-// ABOUT PAGE
-
-.about-page, #objectives, .after-the-summit, #attendees-page, #discussion-page  {
-	padding-top: 60px;
-	padding-bottom: 60px;
-	h3 {
-		color: $pink_orange;
-	}
-	p {
-		color: $black;
-		font-size: 20px;
-		font-weight: 300;
-		line-height: 1.6;
-	}
-}
-
-.infographic {
-	border-bottom: 1px dashed $grey;
-	padding-bottom: 60px;
-	margin-bottom: 20px;
-}
-
-
-.graphic-placeholder {
-	background: $orange;
-}
-
-.graphic-caption {
-	background: $light_grey;
-	h3 {
-		padding-top: 10px;
-		padding-bottom: 0;
-	}
-	p {
-		font-weight: 300;
-		line-height: 1.6;
-		color: $grey;
-		font-size: 18px;
-	}
-}
-
-#quote {
-	background: $accent_color;
-	margin-bottom: 20px;
-	p {
-		color: $white;
-		font-weight: 300;
-		font-size: 28px;
-		line-height: 1.6;
-		margin-top: 70px;
-	}
-	.accented_text {
-		color: $white;
-	}
-
-	h3 {
-		color: $white;
-	}
-}
-
-.photo-placeholder {
-
-	height: 175px;
-	width: 250px;
-	background: $pearl;
-	margin: 70px 35px 70px 70px;;
-}
-
-
-// RESOURCES BUTTONS 
-.resource-type {
-	position: relative;
-	top: -3px;
-	display: inline-block;
-	margin-left: 10px;
-	margin-right: 5px;
-	padding: 6px 12px;
-	border-radius: 7px;
-	color: $pink_orange;
-	font-size: 12px;
-	text-transform: uppercase;
-	font-weight: 600;
-	border: 1px solid $pink_orange;
-}
-
-.right-arrow {
-	height: 0px;
-	width: 0px;
-	border-top: 7px solid transparent;
-	border-bottom: 7px solid transparent;	
-	border-left: 12.124px solid rgba(35,31,32,0.25); // to make equilateral triangle: (border-top width + border-bottom width) * 0.866
-	float: right;
-	margin-top: 12px;
-	margin-bottom: 16px;
-	transition: $transition;
-	
-}
-
-#button-text {
-	font-size: 19px;
-	font-weight: 500;
-	text-transform: initial;
-}
-
-.pdf-button {
-	background-color: $white;
-}
-
-
-.btn-default {
-	width: 100%;
-	border: 1px solid transparent;
-	color: $black;
-	margin: 20px 0;
-	padding: 10px 16px;
-	border-radius: 5px;
-	text-align: left;
-	transition: $transition;
-	.resource-type {
-		transition: $transition;
-	}
-	&:hover, &:active, &:focus {
-		border: 1px solid transparent;
-		box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
-		.resource-type {
-			color: #fff;
-			background-color: $pink_orange;
-		}
-		.right-arrow {
-			border-left: 12.124px solid rgba(35,31,32,0.5);
-		}
-	}
-	h4 {
-		display: inline-block;
-		font-size: 16px;
-		color: $black;
-		margin-top: 10px;
-		margin-bottom: 10px;
-	}
-}
-
-.after-the-summit {
-	background: url(../img/landing_hero.png);
-	height: 400px;
-	margin-top: 40px;
-	margin-bottom: 40px;
-}
-
-
-
-#attendees-page {
-	.bottom_divider {
-		margin-top: 60px;
-		margin-bottom: 20px;
-	}
-	.accented_text {
-	color: $accent_color;
-	}
-	.graphic-caption>p {
-		font-size: 18px;
-	}
-	.grid {
-		margin-bottom: 0;
-	}
-	#grey-section {
-		background: $grey;
-		padding: 30px;
-		h3 {
-			color: $white;
-		}
-		p {
-			color: $white;
-			padding: 10px 20px 20px 0;
-
-			font-size: 16px;
-		}
-	}
-}
-
-
-#discussion-page {
-	p {
-		&:nth-of-type(1) {
-		margin-bottom: 40px;
-		}
-	}
-	.bottom_divider {
-		margin-top: 10px;
-		margin-bottom: 10px;
-	}
-}
-
-.discussion-question {
-	position: relative;
-	margin-top: 20px;
-	ul {
-		padding-left: 0;
-		li {
-			display: inline-block;
-			color: $grey;
-			font-family: $secondary_font;
-			text-transform: uppercase;
-			padding-left: 0;
-			}
-	}
-	p {
-		font-size: 28px !important;
-		padding-bottom: 0;
-	}
-
-	svg {
-		position: absolute;
-		margin-left: auto;
-		margin-right: auto;
-		margin-top: 30%;
-		left: 0;
-		right: 0;
-		width: 50px;
-		polygon {
-			fill: $grey;
-		}
-		line {
-			stroke: $grey;
-		}
-		&:hover, &:focus, &:active:focus  {
-			polygon {
-			fill: $pink_orange;
-			}
-			line {
-			stroke: $pink_orange;
-			}
-		}
-	}
-
-}
-
-#comments {
-		background: $light_grey;
-
-		#comments-container {
-			margin-top: -20%;
-			margin-bottom: 5em;
-			background: $white;
-			border: 5px solid rgba(170, 170, 170, 0.3);
-			padding-bottom: 30px; 
-			background-clip: padding-box;
-			-webkit-background-clip: padding;
-			-moz-background-clip: padding;
-		}
-
-		.comments-header {
-			padding-top: 30px;
-			padding-bottom: 40px;
-			h3 {
-				color: $accent_color;
-				font-size: 20px;
-				margin-left: 20px;
-			}
-		}
-
-		.comments-body {
-			padding-bottom: 30px;
-			img {
-				margin: 40px 10px 10px 10px;
-				&:nth-of-type(1) {
-					margin-top: 20px;
-				}
-			}
-
-
-			h5 {
-				font-family: $secondary_font;
-				text-transform: uppercase;
-				color: $black;
-			}
-			
-			h5, h6 {
-				font-size: 16px;
-				font-weight: 600;
-				margin-top: 30px;
-				margin-left: 20px;
-			}
-
-			p {
-				color: $black;
-				font-size: 16px;
-				line-height: 1.6;
-				margin-left: 20px;
-			}
-
-			textarea {
-				margin: 20px 10px 10px 10px;
-			}
-
-			.comment-detail {
-				padding-bottom: 30px;				
-			}
-
-			.comment-border {
-				padding-top: 15px;
-				border-bottom: 1px solid $light_grey;
-			}
-		}
-
-	}
-
-
-
+@import "components";
+@import "pages";
 
