--- a/wp-content/themes/paea_theme/style.css
+++ b/wp-content/themes/paea_theme/style.css
@@ -4,7 +4,7 @@ Theme URI: Your Theme's URI
 Description: Physician Assistants Education Association Stakeholder Summit 2016
 Version: 1.0
 Author: Interactive Mechanics
-Author URI: http://www.interactivemechancis.com
+Author URI: http://www.interactivemechanics.com
 */
 
 
