--- a/css/Sass/_typography.scss
+++ b/css/Sass/_typography.scss
@@ -38,7 +38,7 @@ a {
 }
 
 .bottom_divider {
-	border-bottom: 1px dotted $medium_grey;
+	border-bottom: 1px dashed $medium_grey;
 }
 
 // BASIC HEADING AND PARAGRAPH STYLE
