--- a/css/Sass/_grid.scss
+++ b/css/Sass/_grid.scss
@@ -14,7 +14,7 @@
 }
 
 .grid-item {
-	position: relative;
+	//position: relative;
   float: left;
 	height: 225px;
 	width: 225px;
@@ -57,20 +57,13 @@
 	background: $grey;
 }
 
-.grid-item--long {
-	width: 510px;
-	height: 296px;
-	margin: 20px;
-}
 
 .right-margin {
-	margin-left: 0px;
-	//margin-right: 15px;
+	margin-left: -1px;
 }
 
 .left-margin {
-	margin-right: 0px;
-	//margin-left: 15px;
+	margin-right: -3px;
 }
 
 #about-block {
