--- a/css/Sass/_grid.scss
+++ b/css/Sass/_grid.scss
@@ -19,7 +19,7 @@
 	height: 225px;
 	width: 225px;
 	margin: 15px;
-	background: #ff0000;
+	background: $pearl;
 	padding: 10px;
 	h3 {
 		padding: 15px 10px 5px 25px;
