--- a/css/Sass/_typography.scss
+++ b/css/Sass/_typography.scss
@@ -43,7 +43,7 @@ a {
 
 // BASIC HEADING AND PARAGRAPH STYLE
 
-.about-page, #objectives, .after-the-summit, #attendees-page, #discussion-page  {
+.about-page, #objectives, .after-the-summit, #attendees-page, #discussion-page, #schedule-page {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	h3 {
