--- a/css/Sass/_typography.scss
+++ b/css/Sass/_typography.scss
@@ -16,6 +16,7 @@ h3 {
 	font-family: $secondary_font;
 }
 
+
 .white_text {
 	color: $white;
 }
@@ -43,7 +44,7 @@ a {
 
 // BASIC HEADING AND PARAGRAPH STYLE
 
-.about-page, #objectives, .after-the-summit, #attendees-page, #discussion-page, #schedule-page {
+.about-page, #objectives, .after-the-summit, #attendees-page, #discussion-page, #schedule-page, #faq-page {
 	padding-top: 60px;
 	padding-bottom: 60px;
 	h3 {
