--- a/css/main.css
+++ b/css/main.css
@@ -31,12 +31,12 @@ a {
 .bottom_divider {
   border-bottom: 1px dashed #A1A4A7; }
 
-.about-page, #objectives, .after-the-summit, #attendees-page, #discussion-page, #schedule-page {
+.about-page, #objectives, .after-the-summit, #attendees-page, #discussion-page, #schedule-page, #faq-page {
   padding-top: 60px;
   padding-bottom: 60px; }
-  .about-page h3, .about-page .top_banner, #objectives h3, #objectives .top_banner, .after-the-summit h3, .after-the-summit .top_banner, #attendees-page h3, #attendees-page .top_banner, #discussion-page h3, #discussion-page .top_banner, #schedule-page h3, #schedule-page .top_banner {
+  .about-page h3, .about-page .top_banner, #objectives h3, #objectives .top_banner, .after-the-summit h3, .after-the-summit .top_banner, #attendees-page h3, #attendees-page .top_banner, #discussion-page h3, #discussion-page .top_banner, #schedule-page h3, #schedule-page .top_banner, #faq-page h3, #faq-page .top_banner {
     color: #e24e34; }
-  .about-page p, #objectives p, .after-the-summit p, #attendees-page p, #discussion-page p, #schedule-page p {
+  .about-page p, #objectives p, .after-the-summit p, #attendees-page p, #discussion-page p, #schedule-page p, #faq-page p {
     color: #000000;
     font-size: 20px;
     font-weight: 300;
@@ -558,7 +558,7 @@ footer {
 #schedule-page .bottom_divider {
   padding-bottom: 20px; }
 
-#schedule-summary {
+#schedule-summary, #faq-summary {
   padding-bottom: 50px; }
 
 .schedule-item {
@@ -655,5 +655,11 @@ footer {
     #comments .comments-body .comment-border {
       padding-top: 15px;
       border-bottom: 1px solid #e8e8e8; }
+
+.question {
+  padding-top: 10px; }
+
+.answer {
+  padding-bottom: 20px; }
 
 /*# sourceMappingURL=main.css.map */
