--- a/css/Sass/_pages.scss
+++ b/css/Sass/_pages.scss
@@ -171,7 +171,9 @@
 	position: relative;
 	margin-top: 20px;
 	ul {
+		display: inline-block;
 		padding-left: 0;
+		margin-top: -5px;
 		li {
 			display: inline-block;
 			color: $grey;
@@ -185,7 +187,7 @@
 		padding-bottom: 0;
 	}
 
-	svg {
+	#right-arrow {
 		position: absolute;
 		margin-left: auto;
 		margin-right: auto;
@@ -203,12 +205,14 @@
 			polygon {
 			fill: $pink_orange;
 			}
-			line {
-			stroke: $pink_orange;
-			}
 		}
 	}
 
+}
+
+#comment-bubble{
+	width: 14px;
+	margin-right: 5px;
 }
 
 // DISCUSSION DETAIL PAGE
