--- a/css/main.css
+++ b/css/main.css
@@ -583,7 +583,9 @@ footer {
   position: relative;
   margin-top: 20px; }
   .discussion-question ul {
-    padding-left: 0; }
+    display: inline-block;
+    padding-left: 0;
+    margin-top: -5px; }
     .discussion-question ul li {
       display: inline-block;
       color: #63686c;
@@ -593,7 +595,7 @@ footer {
   .discussion-question p {
     font-size: 28px !important;
     padding-bottom: 0; }
-  .discussion-question svg {
+  .discussion-question #right-arrow {
     position: absolute;
     margin-left: auto;
     margin-right: auto;
@@ -601,14 +603,16 @@ footer {
     left: 0;
     right: 0;
     width: 40px; }
-    .discussion-question svg polygon {
+    .discussion-question #right-arrow polygon {
       fill: #63686c; }
-    .discussion-question svg line {
+    .discussion-question #right-arrow line {
       stroke: #63686c; }
-    .discussion-question svg:hover polygon, .discussion-question svg:focus polygon, .discussion-question svg:active:focus polygon {
+    .discussion-question #right-arrow:hover polygon, .discussion-question #right-arrow:focus polygon, .discussion-question #right-arrow:active:focus polygon {
       fill: #e24e34; }
-    .discussion-question svg:hover line, .discussion-question svg:focus line, .discussion-question svg:active:focus line {
-      stroke: #e24e34; }
+
+#comment-bubble {
+  width: 14px;
+  margin-right: 5px; }
 
 #comments {
   background: #e8e8e8; }
