--- a/css/Sass/_components.scss
+++ b/css/Sass/_components.scss
@@ -6,7 +6,7 @@
 	height: 500px;
 	position: relative;
 	margin-bottom: 0;
-	h2 {
+	p {
 		text-align: center;
 		font-size: 36px;
 		margin-top: 0px;
@@ -94,6 +94,15 @@
 	bottom: 0;
 	left: 0;
 	padding: 15px 15px 15px 30px;
+	transition: $transition;
+	svg {
+		display: inline-block;
+    width: 30px;
+    margin-top: 10px;
+    float: left;
+    margin-right: 10px;
+    transition: $transition;
+	}
 	p {
 		font-size: 18px;
 		font-weight: 600;
