--- a/css/Sass/_footer.scss
+++ b/css/Sass/_footer.scss
@@ -13,6 +13,8 @@ footer {
 		padding: 20px 0 40px 10px;
 		margin-bottom: 25px;
 		h2 {
+			font-family: $primary_font;
+			text-transform: initial;
 			text-align: center;
 			font-size: 32px;
 			font-weight: 300;
