--- a/css/Sass/_typography.scss
+++ b/css/Sass/_typography.scss
@@ -9,13 +9,20 @@
 	font-weight: 500;
 }
 
+h2 {
+	font-size: 20px;
+}
+
+
 h3 {
 	font-size: 16px;
+}
+
+h2, h3 {
 	font-weight: 600;
 	text-transform: uppercase;
 	font-family: $secondary_font;
 }
-
 
 .white_text {
 	color: $white;
@@ -47,7 +54,7 @@ a {
 .about-page, #objectives, .after-the-summit, #attendees-page, #discussion-page, #schedule-page, #faq-page {
 	padding-top: 60px;
 	padding-bottom: 60px;
-	h3 {
+	h2, h3 {
 		color: $pink_orange;
 	}
 	p {
